# End-to-end-robot-assisted-fundus-capture-and-DR-grading-pipeline

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  ONBOARDING.md  README.md  pyproject.toml
.claude/agents/: doc_update.md  iron_law_audit.md  reference_lookup.md  ruleset_update.md
.claude/skills/doc_update/: SKILL.md
.claude/skills/iron-law-audit/: SKILL.md
.claude/skills/ml-inference/: SKILL.md
.claude/skills/reference-lookup/: SKILL.md
.claude/skills/ruleset-update/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  update-submodules.yml
data/: app_config.yaml  arm_config.yaml  arm_jog_poses.yaml  hand_config.yaml
docs/: BOM.md
docs/conventions/: 00-iron-laws.md  01-module-layering.md  02-code-style-python.md  03-code-style-shell.md  04-testing-verification.md  05-git-workflow.md  06-documentation-protocol.md  07-kiss-simplicity.md  README.md
docs/plans/: 01-unified-gui-spec.md
docs/superpowers/plans/: 2026-05-31-amazinghand-range-calibration.md  2026-06-03-so-arm101-keyboard-jog.md  2026-06-03-so-arm101-verify-helpers.md  2026-06-04-arm-pose-store-kiss.md  2026-06-04-capture-pose.md  2026-06-04-set-pose-manual-mode.md  2026-06-07-codebase-refactor.md  2026-06-07-externalize-tunables-config.md  2026-06-08-grab-index-toggle.md  2026-06-08-grab-sequence-staged.md  2026-06-10-grab-trigger-capture.md  2026-06-11-dr-grading-inference.md  2026-06-11-dr-grading-phase2-inline.md  2026-06-19-arc-auto-trigger.md  2026-06-22-system-camera-2k-roi.md  2026-06-22-system-camera-view-calibration.md  2026-06-23-system-camera-arc-debug-diagnostic.md  2026-06-23-system-camera-arc-sweep-calibration.md  2026-06-23-system-camera-deskew-circle-redgate.md
docs/superpowers/specs/: 2026-05-31-amazinghand-range-calibration-design.md  2026-06-03-so-arm101-keyboard-jog-design.md  2026-06-03-so-arm101-verify-helpers-design.md  2026-06-04-capture-pose-design.md  2026-06-04-set-pose-manual-mode-design.md  2026-06-05-amazinghand-jog-config-ssot-design.md  2026-06-07-codebase-refactor-design.md  2026-06-07-externalize-tunables-config-design.md  2026-06-08-grab-index-toggle-design.md  2026-06-11-dr-grading-design.md  2026-06-11-dr-grading-phase2-inline-design.md  2026-06-19-arc-auto-trigger-design.md  2026-06-22-system-camera-2k-roi-design.md  2026-06-23-system-camera-arc-debug-diagnostic-design.md  2026-06-23-system-camera-arc-sweep-calibration-design.md  2026-06-23-system-camera-deskew-circle-redgate-design.md  2026-06-23-system-camera-red-sweep-robustness-design.md  2026-06-24-system-camera-arc-redness-lab-design.md
scripts/calibration/AmazingHand/: AmazingHand_FingerTest.py  AmazingHand_FullHand_Test.py  AmazingHand_MiddlePos_FingerCalib.py  AmazingHand_MotorReset.py  AmazingHand_RangeCalib.py  AmazingHand_SetPose.py  AmazingHand_calib_values.yaml  README.md  jog.py
scripts/calibration/amazing_hand/: README.md  finger_test.py  full_hand_test.py  hand_calib_values.yaml  jog.py  middle_calib.py  motor_reset.py  range_calib.py  set_pose.py
scripts/calibration/so_arm101/: README.md  _common.py  capture_pose.py  jog.py  scan.py  set_pose.py  show_calib.py  (+2 more)
scripts/demos/: grab_auto_trigger_analysis.py  grab_sequence.py  grab_toggle.py  grab_trigger_capture.py  grab_trigger_capture_analysis.py
scripts/diagnostics/: _hand_paths.py  aurora_discover_probe.py  aurora_getfile_probe.py  aurora_probe.py  aurora_read_probe.py  aurora_tcp_probe.py  aurora_wiredump.py  find_port.py  scan.py  show_calib.py  usb_camera_capture.py  usb_camera_roi_preview.py
scripts/fundus_analysis/: README.md  aptos_eval.py  export_weights.py
src/arm101_hand/: __init__.py
tests/hardware/: test_hand_real.py
tests/unit/: test_app_config.py  test_arc_debug_sidecar.py  test_arc_detector.py  test_arc_sweep_replay.py  test_arm_calibration_summary.py  test_arm_config_data.py  test_arm_config_schema.py  test_arm_jog.py  test_arm_poses_save.py  test_arm_poses_schema.py  test_auto_trigger.py  test_calibration.py  test_camera_capture.py  test_camera_client.py  test_camera_config.py  test_camera_protocol.py  test_device_setup.py  test_finger_io.py  test_focus.py  test_fundus_analysis_config.py  test_fundus_analysis_grader.py  test_fundus_analysis_preprocess.py  test_fundus_analysis_render.py  test_fundus_capture.py  test_fundus_client.py  test_fundus_config.py  test_fundus_protocol.py  test_hand_config_data.py  test_hand_config_save.py  test_hand_config_schema.py  test_hand_controller_mock.py  test_hand_kinematics.py  test_hand_motion.py  test_hand_pose_resolver.py  test_hand_poses_schema.py  test_index_trigger.py  test_motor_ids.py  test_pose_jog.py  test_preview_letterbox.py  test_range_calib.py  (+7 more)
(+77 files in other folders)
