[project]
name = "arm101-hand"
version = "0.1.0"
description = "Unified workspace for SO-ARM101 follower + AmazingHand calibration & control"
requires-python = ">=3.12"
dependencies = [
    "lerobot[feetech]",
    "rustypot>=1.4,<2.0",
    "numpy>=2.0,<2.3",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "opencv-python>=4.9",  # full build (HighGUI) for the live USB-camera preview; see [tool.uv] below
    "timm>=1.0,<1.1",  # ViT-L/16 builder for RETFound DR-grading inference (exact 296-key match verified)
    "ruamel-yaml>=0.18",
]

[project.optional-dependencies]
dev = ["ruff>=0.8", "mypy>=1.10", "pytest>=8.0", "types-PyYAML>=6.0", "scikit-learn>=1.4"]

[project.scripts]
arm101-calibrate-follower = "arm101_hand.scripts.calibrate_follower:main"
arm101-arm-torque = "arm101_hand.scripts.arm_torque:main"
arm101-dr-grade = "arm101_hand.scripts.dr_grade:main"

[tool.uv]
# lerobot depends on `opencv-python-headless`, which has NO HighGUI (cv2.imshow raises
# "function not implemented"). The live camera preview needs a window, so we drop the
# headless pin (marker never matches -> excluded) and install the full `opencv-python`
# wheel as the SOLE cv2 provider. Both distributions ship the same `cv2` package, so only
# one may be installed; full is a superset, so lerobot keeps working.
override-dependencies = ["opencv-python-headless ; sys_platform == 'never'"]

[tool.uv.sources]
lerobot = { path = "references/lerobot", editable = true }
# rustypot deliberately NOT sourced here — use the PyPI wheel.
# Editable rustypot would require `maturin develop --features python --features pyo3/extension-module`
# on every `uv sync` and a Rust toolchain on the dev machine.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arm101_hand = ["data/*.yaml", "data/*.md"]

[tool.ruff]
target-version = "py312"
line-length = 110
# Vendored read-only submodules (IL-2) are never linted or formatted by us.
extend-exclude = ["references"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "N", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
# Keep collection inside our own ``tests/`` tree. The vendored submodules under
# ``references/`` ship their own conftest.py files (some define an option named
# ``--port`` that collides with ours), and they are read-only per IL-2.
testpaths = ["tests"]
markers = [
    "hardware: test requires a physical bus (powered AmazingHand on a COM port)",
]
